[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Icons/settings-gears.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Main/Connection.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ConnectionPannel" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 599.0

[node name="Layout" type="VBoxContainer" parent="ConnectionPannel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 592.0
alignment = 1

[node name="PseudoCont" type="HBoxContainer" parent="ConnectionPannel/Layout"]
margin_top = 266.0
margin_right = 1010.0
margin_bottom = 290.0
alignment = 1

[node name="Label" type="Label" parent="ConnectionPannel/Layout/PseudoCont"]
margin_left = 375.0
margin_top = 5.0
margin_right = 430.0
margin_bottom = 19.0
text = "Pseudo :"

[node name="PseudoEdit" type="LineEdit" parent="ConnectionPannel/Layout/PseudoCont"]
margin_left = 434.0
margin_right = 634.0
margin_bottom = 24.0
grow_horizontal = 0
rect_min_size = Vector2( 200, 0 )
align = 1
max_length = 20
clear_button_enabled = true
placeholder_text = "Enter your pseudo"

[node name="CenterContainer" type="HBoxContainer" parent="ConnectionPannel/Layout"]
margin_top = 294.0
margin_right = 1010.0
margin_bottom = 319.0
alignment = 1

[node name="HostButton" type="Button" parent="ConnectionPannel/Layout/CenterContainer"]
margin_left = 425.0
margin_right = 467.0
margin_bottom = 25.0
text = "Host"

[node name="ConnecButton" type="Button" parent="ConnectionPannel/Layout/CenterContainer"]
margin_left = 471.0
margin_right = 555.0
margin_bottom = 25.0
text = "Connection"

[node name="ToolButton" type="ToolButton" parent="ConnectionPannel/Layout/CenterContainer"]
margin_left = 559.0
margin_right = 584.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="TextureRect" type="TextureRect" parent="ConnectionPannel/Layout/CenterContainer/ToolButton"]
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="OptionPanel" type="Panel" parent="."]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 976.0
margin_bottom = 552.0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionPanel"]
margin_right = 926.0
margin_bottom = 502.0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 1

[node name="ReseauCat" type="HBoxContainer" parent="OptionPanel/VBoxContainer"]
margin_top = 230.0
margin_right = 926.0
margin_bottom = 244.0
alignment = 1

[node name="Label" type="Label" parent="OptionPanel/VBoxContainer/ReseauCat"]
margin_left = 436.0
margin_right = 490.0
margin_bottom = 14.0
text = "Reseau :"

[node name="IP" type="HBoxContainer" parent="OptionPanel/VBoxContainer"]
margin_top = 248.0
margin_right = 926.0
margin_bottom = 272.0
alignment = 1

[node name="Label" type="Label" parent="OptionPanel/VBoxContainer/IP"]
margin_left = 350.0
margin_top = 5.0
margin_right = 371.0
margin_bottom = 19.0
text = "IP :"

[node name="LineEdit" type="LineEdit" parent="OptionPanel/VBoxContainer/IP"]
margin_left = 375.0
margin_right = 575.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )

[node name="CloseOption" type="Button" parent="OptionPanel"]
margin_left = 886.0
margin_top = 6.0
margin_right = 920.0
margin_bottom = 38.0

[node name="ServerContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0

[node name="PlayerList" type="VBoxContainer" parent="ServerContainer"]
margin_left = 10.0
margin_top = 40.0
margin_right = 210.0
margin_bottom = 540.0

[node name="Label" type="Label" parent="ServerContainer"]
margin_left = 7.0
margin_top = 25.0
margin_right = 1018.0
margin_bottom = 39.0
text = "Player List :"

[node name="PlayButton" type="Button" parent="ServerContainer"]
margin_left = 405.0
margin_top = 500.0
margin_right = 605.0
margin_bottom = 550.0
text = "PLAY"

[connection signal="pressed" from="ConnectionPannel/Layout/CenterContainer/ConnecButton" to="." method="_on_ConnecButton_pressed"]
[connection signal="pressed" from="ConnectionPannel/Layout/CenterContainer/ToolButton" to="." method="_on_ToolButton_pressed"]
[connection signal="pressed" from="OptionPanel/CloseOption" to="." method="_on_CloseOption_pressed"]
